[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "aiohttp_auth"
author = "Mehmet Gurdal"
author-email = "mgurdal@protonmail.com"
home-page = "https://github.com/mgurdal/aiohttp_auth"
requires=["aiohttp >= 3.2.0"]
requires-python=">=3.5"
description-file="README.rst"
classifiers = ["License :: OSI Approved :: Apache Software License",
	       "Development Status :: 4 - Beta",
	       "Intended Audience :: Developers",
	       "Framework :: AsyncIO",
	       "Programming Language :: Python",
	       "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.5",
               "Programming Language :: Python :: 3.6",
               "Programming Language :: Python :: 3.7",
	       "Topic :: Software Development",
]

[tool.towncrier]
package = "aiohttp_auth"
filename = "CHANGES.rst"
directory = "CHANGES/"
title_format = "{version} ({project_date})"
