[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "aegis"
author = "Mehmet Gurdal"
author-email = "mgurdal@protonmail.com"
home-page = "https://github.com/mgurdal/aegis"
requires=["aiohttp >= 3.2.0", "PyJWT == 1.7.1"]
requires-python=">=3.5"
description-file="README.rst"
classifiers = ["License :: OSI Approved :: Apache Software License",
	       "Development Status :: 4 - Beta",
	       "Intended Audience :: Developers",
	       "Framework :: AsyncIO",
	       "Programming Language :: Python",
	       "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.5",
               "Programming Language :: Python :: 3.6",
               "Programming Language :: Python :: 3.7",
	       "Topic :: Software Development",
]

[tool.towncrier]
package = "aegis"
filename = "CHANGES.rst"
directory = "CHANGES/"
title_format = "{version} ({project_date})"
